--- a/frontend/style.css
+++ b/frontend/style.css
@@ -15,6 +15,7 @@ body {
 h1 {
     margin-top: 20px;
     color: #444;
+    text-align: center;
 }
 
 form {
@@ -73,4 +74,31 @@ li button {
 
 li button:hover {
     background-color: #c82333;
+}
+
+@media (max-width: 600px) {
+    form {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    input[type="email"],
+    input[type="text"],
+    button {
+        width: 100%;
+    }
+
+    ul {
+        width: 90%;
+    }
+
+    li {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    li button {
+        align-self: flex-end;
+    }
 }
